# FontGenerator-for-ExternalLocalizer

./: .gitignore  Cargo.toml  README.md
fontforge/: boldify.pe  boldify.ps1
fontforge/ttf/: LICENSE.txt
src/: fonts.rs  main.rs  types.rs  wrapper.rs  xml.rs
