[package]
name = "dynamic-sprite-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
font = "0.40.0"
font-kit = "0.14.2"
glob = "0.3.2"
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
typed-builder = "0.20.0"
